Make words bigger

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
         }
 
         h2 {
-            font-size: 1.5em;
+            font-size: 2em;
             color: #333;
             margin-bottom: 10px;
         }
@@ -29,7 +29,7 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             box-sizing: border-box;
-            font-size: 1em;
+            font-size: 1.5em;
         }
 
         input[type="text"]:focus,
@@ -60,7 +60,7 @@
             color: white;
             border: none;
             border-radius: 5px;
-            font-size: 1em;
+            font-size: 1.5em;
             cursor: pointer;
             transition: background-color 0.3s;
         }
@@ -79,9 +79,9 @@
     <script src="popup.js"></script>
     <div class="container">
         
-        <h2>Gemini Query</h2>
+        <h2>Local Gemini</h2>
         <input type="text" id="queryInput" placeholder="Enter your query here">
-        <textarea id="responseOutput" rows="10" readonly placeholder="Output will be displayed here"></textarea>
+        <textarea id="responseOutput" rows="10" readonly placeholder="Output"></textarea>
     </div>
 
 </body>
